refactor: rename anki audio provider